@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="25"
+VERSION_BUILD="26"
 
 # $Log$
+#
+# BUILD : 1.3.0.26 (SVN)
+# BUGS  : 397
+# NOTES : Empty SWHOIS message now handled correctly
 #
 # BUILD : 1.3.0.25 (SVN)
 # BUGS  : N/A
